{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 73,
  "lineage": "28644107-8db6-5cee-8d94-22b32bb0de7a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:security-group/sg-0aca8d31ccf30bc71",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aca8d31ccf30bc71",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "827592468360",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:security-group/sg-03bb9720a5565a544",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03bb9720a5565a544",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b1dd13efc93e18de"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hw-eks-cluster-cluster-2023021706032701260000000b",
            "name_prefix": "hw-eks-cluster-cluster-",
            "owner_id": "827592468360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hw-eks-cluster-cluster"
            },
            "tags_all": {
              "Name": "hw-eks-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:security-group/sg-0b1dd13efc93e18de",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b1dd13efc93e18de",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bb9720a5565a544"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bb9720a5565a544"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bb9720a5565a544"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bb9720a5565a544"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bb9720a5565a544"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bb9720a5565a544"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "hw-eks-cluster-node-2023021706032701060000000a",
            "name_prefix": "hw-eks-cluster-node-",
            "owner_id": "827592468360",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hw-eks-cluster-node"
            },
            "tags_all": {
              "Name": "hw-eks-cluster-node"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-807317271",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03bb9720a5565a544",
            "security_group_rule_id": "sgr-0e717e9ad0cb5d630",
            "self": false,
            "source_security_group_id": "sg-0b1dd13efc93e18de",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3359997284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-0ea2572602aeb9190",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1992225153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-08763adbc05dde9d9",
            "self": false,
            "source_security_group_id": "sg-03bb9720a5565a544",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-745568864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-0849d681358bbfe6d",
            "self": false,
            "source_security_group_id": "sg-03bb9720a5565a544",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3845266934",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-081336c583eb96946",
            "self": false,
            "source_security_group_id": "sg-03bb9720a5565a544",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4134412759",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-0b400d1192421046d",
            "self": false,
            "source_security_group_id": "sg-03bb9720a5565a544",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2463044124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-0fcafee1244b50909",
            "self": false,
            "source_security_group_id": "sg-03bb9720a5565a544",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2853793573",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-066770d2e7ee6b078",
            "self": false,
            "source_security_group_id": "sg-03bb9720a5565a544",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1500744614",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-0e5ea5e879c38a46d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1519259827",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-0fb91d7271f9aa5bd",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4275155804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b1dd13efc93e18de",
            "security_group_rule_id": "sgr-08d2537aae0cd05f9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b703fb233ab9b523",
            "association_id": "eipassoc-0c593d3198d3268f5",
            "domain": "vpc",
            "id": "eipalloc-0b703fb233ab9b523",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d6e2b9ca88514743",
            "private_dns": "ip-10-0-7-186.ec2.internal",
            "private_ip": "10.0.7.186",
            "public_dns": "ec2-34-202-204-39.compute-1.amazonaws.com",
            "public_ip": "34.202.204.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:internet-gateway/igw-04610e9e1c9661eab",
            "id": "igw-04610e9e1c9661eab",
            "owner_id": "827592468360",
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_vpc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b703fb233ab9b523",
            "connectivity_type": "public",
            "id": "nat-0a7e90853cfe5b8a2",
            "network_interface_id": "eni-0d6e2b9ca88514743",
            "private_ip": "10.0.7.186",
            "public_ip": "34.202.204.39",
            "subnet_id": "subnet-03b7e69485dce10f8"
          },
          "dependencies": [
            "module.eks-vpc.aws_eip.nat",
            "module.eks-vpc.aws_internet_gateway.eks_vpc_igw",
            "module.eks-vpc.aws_subnet.eks_vpc_subnet_public_a",
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a0512cb780a69db61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a7e90853cfe5b8a2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a0512cb780a69db6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_eip.nat",
            "module.eks-vpc.aws_internet_gateway.eks_vpc_igw",
            "module.eks-vpc.aws_nat_gateway.eks_vpc_nat",
            "module.eks-vpc.aws_route_table.eks_vpc_route_table_private",
            "module.eks-vpc.aws_subnet.eks_vpc_subnet_public_a",
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04610e9e1c9661eab",
            "id": "r-rtb-0ab01da38557de3b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab01da38557de3b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_internet_gateway.eks_vpc_igw",
            "module.eks-vpc.aws_route_table.eks_vpc_route_table_public",
            "module.eks-vpc.aws_vpc.hw_eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_vpc_route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:route-table/rtb-0a0512cb780a69db6",
            "id": "rtb-0a0512cb780a69db6",
            "owner_id": "827592468360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a7e90853cfe5b8a2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private rt"
            },
            "tags_all": {
              "Name": "private rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_vpc_route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:route-table/rtb-0ab01da38557de3b4",
            "id": "rtb-0ab01da38557de3b4",
            "owner_id": "827592468360",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04610e9e1c9661eab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public rt"
            },
            "tags_all": {
              "Name": "public rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_vpc_route_table_assoc_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0767ced5dad707090",
            "route_table_id": "rtb-0a0512cb780a69db6",
            "subnet_id": "subnet-06cf0b8011018527b"
          },
          "dependencies": [
            "module.eks-vpc.aws_route_table.eks_vpc_route_table_private",
            "module.eks-vpc.aws_subnet.eks_vpc_subnet_private_a",
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_vpc_route_table_assoc_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2eaa267fca8afcc",
            "route_table_id": "rtb-0a0512cb780a69db6",
            "subnet_id": "subnet-0be88b5d94744c1b1"
          },
          "dependencies": [
            "module.eks-vpc.aws_route_table.eks_vpc_route_table_private",
            "module.eks-vpc.aws_subnet.eks_vpc_subnet_private_b",
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_vpc_route_table_assoc_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097ac993b5aaa5f69",
            "route_table_id": "rtb-0ab01da38557de3b4",
            "subnet_id": "subnet-03b7e69485dce10f8"
          },
          "dependencies": [
            "module.eks-vpc.aws_route_table.eks_vpc_route_table_public",
            "module.eks-vpc.aws_subnet.eks_vpc_subnet_public_a",
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_vpc_route_table_assoc_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068f385a999fe2ae3",
            "route_table_id": "rtb-0ab01da38557de3b4",
            "subnet_id": "subnet-0ec2bb16b24dfe192"
          },
          "dependencies": [
            "module.eks-vpc.aws_route_table.eks_vpc_route_table_public",
            "module.eks-vpc.aws_subnet.eks_vpc_subnet_public_b",
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_vpc_subnet_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:subnet/subnet-06cf0b8011018527b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cf0b8011018527b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827592468360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-private-us-east-1a",
              "kubernetes.io/cluster/hw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sn-private-us-east-1a",
              "kubernetes.io/cluster/hw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_vpc_subnet_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:subnet/subnet-0be88b5d94744c1b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be88b5d94744c1b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827592468360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-private-us-east-1b",
              "kubernetes.io/cluster/hw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "sn-private-us-east-1b",
              "kubernetes.io/cluster/hw-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_vpc_subnet_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:subnet/subnet-03b7e69485dce10f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b7e69485dce10f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827592468360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-public-us-east-1a",
              "kubernetes.io/cluster/hw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sn-public-us-east-1a",
              "kubernetes.io/cluster/hw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_vpc_subnet_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:subnet/subnet-0ec2bb16b24dfe192",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec2bb16b24dfe192",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827592468360",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-public-us-east-1b",
              "kubernetes.io/cluster/hw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "sn-public-us-east-1b",
              "kubernetes.io/cluster/hw-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02f75e3ff2cbccd59"
          },
          "dependencies": [
            "module.eks-vpc.aws_vpc.hw_eks_vpc",
            "module.eks-vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hw_eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827592468360:vpc/vpc-02f75e3ff2cbccd59",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0486f1c3f2fc441a3",
            "default_route_table_id": "rtb-0bd143b06cad49e75",
            "default_security_group_id": "sg-0ad634785e88cc829",
            "dhcp_options_id": "dopt-089a410ac9c0fbe13",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f75e3ff2cbccd59",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd143b06cad49e75",
            "owner_id": "827592468360",
            "tags": {
              "Name": "hw eks vpc"
            },
            "tags_all": {
              "Name": "hw eks vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}